dashboard load issue

--- a/src/app/dashboard/orders/open-orders/open-orders.component.html
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.html
@@ -91,7 +91,7 @@
           <input class="wrap-input__input" type="text"
                  [(ngModel)]="order.amount"
                  formControlName="quantityOf"
-                 (input)="quantityIput($event)"
+                 (input)="quantityInput($event)"
                  name="quantityOf">
           <label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>
           <div class="wrap-input__line"></div>
@@ -146,7 +146,7 @@
           <input class="wrap-input__input" type="text"
                  [(ngModel)]="order.amount"
                  formControlName="quantityOf"
-                 (input)="quantityIput($event)"
+                 (input)="quantityInput($event)"
                  name="quantityOf">
           <label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>
           <div class="wrap-input__line"></div>
