added special class 'ordertypeClass' for orderBook component

--- a/src/app/dashboard/order-book/order-book.component.html
+++ b/src/app/dashboard/order-book/order-book.component.html
@@ -66,7 +66,7 @@
     <!-- <div class="chartContainer" id="chartContainer">
 
     </div> -->
-    <div class="order-table">
+    <div class="order-table" [ngClass]="orderTypeClass">
       <div class="head">
         <div class="order table__cell-head table__cell-head--tal table__cell-head--p4">
           <span>
