--- a/src/app/dashboard/trade-history/trade-history.component.scss
+++ b/src/app/dashboard/trade-history/trade-history.component.scss
@@ -69,8 +69,9 @@
 
 tbody {
   display: block;
+  width: 418px;
   height: 430px;
-  overflow-y: scroll;
+  overflow-y: hidden;
   //padding-bottom: 90px;
 }
 
