--- a/src/app/dashboard/order-book/order-book.component.scss
+++ b/src/app/dashboard/order-book/order-book.component.scss
@@ -15,12 +15,11 @@
   height: 100%;
 }
 .items {
-  min-height: 381px;
-  max-height: 422px;
+  //min-height: 381px;
+  max-height: 432px;
   overflow: auto;
   position: relative;
   z-index: 100;
-  height: calc(100% - 24px);
 }
 
 .visualization {
@@ -37,6 +36,7 @@
   .visual-item {
     max-width: 100%;
     margin-left: auto;
+    height: 24px;
     // background: linear-gradient(270deg, rgba(0,180,61,0.15) 0%, rgba(0,180,61,0.15) 51%, rgba(0,180,61,1) 100%);
     opacity: 0.5;
   }
@@ -48,10 +48,6 @@
   .green {
     background: rgba(0,180,61,0.6) !important;
   }
-}
-
-.dark-theme .head .price {
-  color: #A0A0A0 !important;
 }
 
 .order-table {
@@ -66,7 +62,7 @@
     flex-wrap: nowrap;
     position: relative;
     z-index: 100;
-    //font-size: 11px;
+    height: 24px;
   }
 
   .item:hover {
@@ -86,10 +82,13 @@
   }
 
   .order, .price, .total {
-    //padding-left: 4px;
     padding-left: 4px;
     padding-right: 4px;
-    line-height: 16px;
+  }
+  .order, .info, .price, .total {
+    span{
+      line-height: 24px;
+    }
   }
 
   .order {
