--- a/src/app/dashboard/chat/chat.component.scss
+++ b/src/app/dashboard/chat/chat.component.scss
@@ -8,23 +8,14 @@ ng-scrollbar{
   //height: auto;
   height: 400px;
   margin: auto;
-  padding: 5px;
+  //padding: 5px;
 }
 
-li{
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-}
-::ng-deep .ng-scrollbar.-vertical.bar-class{
-  background: rgba(255,255,255, .2);;
-  width: 8px;
-}
+//li{
+//  padding: 10px;
+//  border-bottom: 1px solid #ccc;
+//}
 
-::ng-deep .ng-scrollbar-thumb.thumb2 {
-  background-color: #2a2a2a ;
-  margin-left: 1px;
-  width: 6px;
-}
 
 .widget__chat-wrap{
   padding: 0;
@@ -34,5 +25,5 @@ li{
 
 
 .widget__message-wrap{
-  margin: 0 20px 4px 0;
+  //margin: 0 20px 4px 0;
 }
