--- a/src/app/dashboard/markets/markets.component.scss
+++ b/src/app/dashboard/markets/markets.component.scss
@@ -10,7 +10,7 @@
 }
 
 .widget__table-wrap{
-  margin-right: 10px !important;
+  //margin-right: 10px !important;
 }
 
 //---------
@@ -31,14 +31,10 @@ ng-scrollbar{
   margin: auto;
   //padding: 5px;
 }
-
-li{
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-}
 ::ng-deep .ng-scrollbar.-vertical.bar-class{
-  background: rgba(255,255,255, .2);;
+  background: rgba(255,255,255, .2);
   width: 3px !important;
+  right: 16px !important;
 }
 
 ::ng-deep .ng-scrollbar-thumb.thumb2 {
