--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -294,7 +294,7 @@
     margin-right: 16px;
     margin-left: 16px;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     padding-bottom: 60px;
   }
@@ -646,6 +646,9 @@
         .widget__message {
           margin-right: 28px;
         }
+      }
+      &--right{
+        margin-right: 32px;
       }
     }
     &__search, &__send-message {
