--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -144,21 +144,21 @@
           <div class="wrap-input filters-popup__datepicker">
             <label class="wrap-input__label" for="">From</label>
 
-            <my-date-picker
-              name="from"
+            <!--<my-date-picker-->
+              <!--name="from"-->
               <!--[options]="myDatePickerOptions"-->
-            >
-            </my-date-picker>
+            <!--&gt;-->
+            <!--</my-date-picker>-->
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
           <div class="wrap-input filters-popup__datepicker">
             <label class="wrap-input__label" for="">To</label>
 
-            <my-date-picker
-              name="to"
+            <!--<my-date-picker-->
+              <!--name="to"-->
               <!--[options]="myDatePickerOptions"-->
-            >
-            </my-date-picker>
+            <!--&gt;-->
+            <!--</my-date-picker>-->
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
         </div>
@@ -200,21 +200,21 @@
         <div class="wrap-input orders__datepicker">
           <label class="wrap-input__label" for="">From</label>
 
-          <my-date-picker
-            name="from"
+          <!--<my-date-picker-->
+            <!--name="from"-->
             <!--[options]="myDatePickerOptions"-->
-          >
-          </my-date-picker>
+          <!--&gt;-->
+          <!--</my-date-picker>-->
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
         <div class="wrap-input orders__datepicker">
           <label class="wrap-input__label" for="">To</label>
 
-          <my-date-picker
-            name="to"
+          <!--<my-date-picker-->
+            <!--name="to"-->
             <!--[options]="myDatePickerOptions"-->
-          >
-          </my-date-picker>
+          <!--&gt;-->
+          <!--</my-date-picker>-->
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
       </div>
