--- a/src/app/dashboard/order-book/order-book.component.scss
+++ b/src/app/dashboard/order-book/order-book.component.scss
@@ -21,6 +21,7 @@
   position: relative;
   z-index: 100;
   height: calc(100% - 24px);
+  overflow: hidden;
 }
 
 .items.mobile {
@@ -149,8 +150,10 @@
   }
   span {
     margin-left: 28%;
+    position: relative;
+    z-index: 1001;
   }
   span:first-child {
-    margin-bottom: 1px;
+    bottom: 5px;
   }
 }
