--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -60,8 +60,6 @@
       </div>
     </div>
   </div>
-
-
   <div class="widget__header--mob">
     <div class="widget__name-mob">Markets</div>
     <div class="widget__search-btn">
@@ -73,8 +71,6 @@
       Search
     </div>
   </div>
-
-
   <div class="widget__content">
     <div class="tabs widget__tabs">
       <button class="tabs__item tabs__item--small"
@@ -138,14 +134,13 @@
           </tr>
           </thead>
 
-          <tbody class="table__body table__body--none-shadow">
-          <!-- Content -->
-          <ng-container *ngFor="let pair of pairs | sort:'currencyPairName'">
-            <tr class="table__row widget__table-row"
-                [ngClass]="{'widget__table-row--green': isChangePositive(pair), 'widget__table-row--red': !isChangePositive(pair)}"
-                (click)="onSelectCurrencyPair(pair)">
-              <td class="table__cell table__cell--tac" width="7%">
-
+        <tbody class="table__body table__body--none-shadow">
+            <!-- Content -->
+            <ng-container *ngFor="let pair of pairs | currencySort :'volume'">
+              <tr class="table__row widget__table-row"
+                  [ngClass]="{'widget__table-row--green': isChangePositive(pair), 'widget__table-row--red': !isChangePositive(pair)}"
+              (click)="onSelectCurrencyPair(pair)">
+                <td class="table__cell table__cell--tac" width="7%">
                 <span class="table__row-star" [ngClass]="{'table__row-star--select': pair}">
                   <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -186,7 +181,6 @@
     </div>
 
   </div>
-
 
   <div class="widget__content widget__content--mob">
     <!--table mob start-->
