--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container container--dashboard">
+<div class="container container--dashboard" *ngIf="!isMob">
 <div class="dashboard" (window:resize)="changeRatioByWidth()">
 
     <app-currency-pair-info></app-currency-pair-info>
@@ -76,3 +76,12 @@
 </div>
 
 
+<div class="container container--dashboard" *ngIf="isMob">
+
+
+  <div class="dashboard__widget-wrap">
+    <app-markets></app-markets>
+  </div>
+
+
+</div>
