--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,8 @@
       <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a>
         <div class="submenu">
           <ul class="menu submenu__list">
-            <li class="submenu__item"><a class="submenu__link" href="#" routerLink="open-orders"><span class="menu__link-text">Open orders</span></a></li>
-            <li class="submenu__item"><a class="submenu__link" href="#" routerLink="orders-history"><span class="menu__link-text">Orders history</span></a></li>
+            <li class="submenu__item"><a class="submenu__link"  routerLink="open-orders"><span class="menu__link-text">Open orders</span></a></li>
+            <li class="submenu__item"><a class="submenu__link"  routerLink="orders-history"><span class="menu__link-text">Orders history</span></a></li>
           </ul>
         </div>
       </li>
