add min and max value (exrates) for orderBook component

--- a/src/app/dashboard/order-book/order-book.component.html
+++ b/src/app/dashboard/order-book/order-book.component.html
@@ -123,9 +123,9 @@
         </div>
       </div>
       <div class="separator">
-        <span>6000</span>
+        <span *ngIf="maxExrate">{{maxExrate.exrate | number:'1.1-8'}}</span>
         <div class="hr"></div>
-        <span>5000</span>
+        <span *ngIf="minExrate">{{minExrate.exrate | number:'1.1-8'}}</span>
       </div>
       <div class="items">
 
