--- a/src/assets/scss/components/_select.scss
+++ b/src/assets/scss/components/_select.scss
@@ -216,7 +216,7 @@
       background-color: $dark-indigo;
     }
     &__line {
-      color: $light-blue;
+      background-color: $light-blue;
     }
     &__triangle {
       border-top-color: $light-blue;
