--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -43,6 +43,7 @@
 @import "pages/login-registration";
 @import "pages/dashboard";
 @import "pages/orders";
+@import "pages/referral";
 @import "pages/settings/settings";
 @import "pages/settings/2fa/settings-2fa";
 @import "pages/settings/nickname/settings-nickname";
