relationship dashboard-mobile and mobile-menu

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -35,7 +35,10 @@
 
 
   <div class="dashboard__widget-wrap">
-    <app-markets></app-markets>
+    <!--<app-markets></app-markets>-->
+    <ng-template [ngTemplateOutlet]="loadWidgetTemplate(activeMobileWidget)" [ngTemplateOutletContext]="{ $implicit: 1}">
+    </ng-template>
+
   </div>
 
 
