--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -194,35 +194,35 @@
   </div>
   <div class="header-mob__inner">
     <div class="header-mob__submenu">
-      <a class="header-mob__submenu-link">
+      <a class="header-mob__submenu-link" (click)="setMobileWidget('graph')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/graph.svg">
         <span class="header-mob__submenu-link-text">Graph</span>
       </a>
-      <a class="header-mob__submenu-link" href="#">
+      <a class="header-mob__submenu-link"  (click)="setMobileWidget('trading')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/trade.svg">
         <span class="header-mob__submenu-link-text">Trade</span>
       </a>
-      <a class="header-mob__submenu-link" href="index.html">
+      <a class="header-mob__submenu-link" (click)="setMobileWidget('markets')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/wallet.svg">
         <span class="header-mob__submenu-link-text">Balances</span>
       </a>
-      <a class="header-mob__submenu-link">
+      <a class="header-mob__submenu-link" (click)="setMobileWidget('trade-history')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/history.svg">
         <span class="header-mob__submenu-link-text">History</span>
       </a>
-        <a class="header-mob__submenu-link">
+        <a class="header-mob__submenu-link" (click)="setMobileWidget('orders')">
           <img class="header-mob__submenu-link-img" src="../../assets/img/orders.svg">
           <span class="header-mob__submenu-link-text">Open</span>
         </a>
-      <a class="header-mob__submenu-link">
+      <a class="header-mob__submenu-link" (click)="setMobileWidget('markets')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/markets.svg">
         <span class="header-mob__submenu-link-text">Markets</span>
       </a>
-      <a class="header-mob__submenu-link">
+      <a class="header-mob__submenu-link" (click)="setMobileWidget('order-book')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/order-book.svg">
         <span class="header-mob__submenu-link-text">Book</span>
       </a>
-      <a class="header-mob__submenu-link">
+      <a class="header-mob__submenu-link" (click)="setMobileWidget('chat')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link6.svg">
         <span class="header-mob__submenu-link-text">Chat</span>
       </a>
