--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -930,8 +930,11 @@
   .dark-theme {
     .widget {
       &--gradient {
-        background: linear-gradient(to bottom, rgba(48, 49, 77, 1) 0%, rgba(35, 123, 239, .3) 100%);
-      }
+        background: -webkit-gradient(linear, left top, left bottom, from(rgb(48, 49, 77)), to(rgb(24, 52, 103)));
+        background: -webkit-linear-gradient(top, rgb(48, 49, 77) 0%, rgb(24, 52, 103) 100%);
+        background: -o-linear-gradient(top, rgb(48, 49, 77) 0%, rgb(24, 52, 103) 100%);
+        background: linear-gradient(to bottom, rgb(48, 49, 77) 0%, rgb(24, 52, 103) 100%);
+      };
       &__message-wrap {
         &--left {
           .widget__message {
