implemented mobile version for graph/orderBook/trading components

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
 <div class="container container--dashboard" *ngIf="breackPoint === 'mobile'">
 
 
-  <div class="dashboard__widget-wrap">
+  <div class="dashboard__widget-wrap mobile">
     <!--<app-markets></app-markets>-->
     <ng-template [ngTemplateOutlet]="loadWidgetTemplate(activeMobileWidget)" [ngTemplateOutletContext]="{ $implicit: 1}">
     </ng-template>
