--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,9 @@
 .dashboard__widget-wrap{
   //min-width: 1200px;
   //padding: 20px 0;
+  height: 100%;
 }
+
 
 // TODO: remove border in production
 ngx-gridster-item {
