--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -93,17 +93,22 @@
       </div>
     </div>
   </div>
-  <div class="widget__content">
+  <div class="widget__graph">
     <!-- <div style="background-image: url('../assets/img/Graph.png'); background-repeat: no-repeat;
      -webkit-background-size: cover;background-size: 100% 100%; background-position: center; height: 400px;"></div> -->
      <div class="amcharts-stock_chart_div" id="tv_chart_container"></div>
+     <div class="widget__graph--mob">
+      <!-- <div class="amcharts-stock_chart_div" id="tv_chart_container"></div> -->
+      <div class="widget__buy-sell-btn-wrap" style="margin-bottom: 45px;">
+        <a href="#" class="widget__buy-sell-btn widget__buy-sell-btn--green">Buy BTC</a>
+        <a href="#" class="widget__buy-sell-btn widget__buy-sell-btn--red">Sell BTC</a>
+      </div>
+    </div>
   </div>
-  <div class="widget__content widget__content--mob" style="padding-bottom: 40px;">
-    <div style="background-image: url('../assets/img/Graph.png'); background-repeat: no-repeat;
-     -webkit-background-size: cover;background-size: 100% 100%; background-position: center; height: 100%;"></div>
+  <!-- <div class="widget__content widget__content--mob" style="padding-bottom: 40px;">
     <div class="widget__buy-sell-btn-wrap">
       <a href="#" class="widget__buy-sell-btn widget__buy-sell-btn--green">Buy BTC</a>
       <a href="#" class="widget__buy-sell-btn widget__buy-sell-btn--red">Sell BTC</a>
     </div>
-  </div>
+  </div> -->
 </div>
