--- a/src/app/dashboard/market-search/market-search.component.html
+++ b/src/app/dashboard/market-search/market-search.component.html
@@ -1,7 +1,7 @@
 <div class="market-search">
   <div class="market-search__top">
     <div class="market-search__title">Select currency</div>
-    <div class="market-search__close-mob">
+    <div class="market-search__close-mob" (click)="onCloseModal()">
       <svg width="15" height="17" viewBox="0 0 15 17" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M1.73781 0.627721C1.36501 0.220243 0.732466 0.192129 0.324987 0.564928C-0.0824919 0.937728 -0.110605 1.57027 0.262194 1.97775L1.73781 0.627721ZM13.2622 16.187C13.635 16.5945 14.2675 16.6226 14.675 16.2498C15.0825 15.877 15.1106 15.2445 14.7378 14.837L13.2622 16.187ZM14.7378 1.97775C15.1106 1.57027 15.0825 0.937728 14.675 0.564928C14.2675 0.192129 13.635 0.220243 13.2622 0.627721L14.7378 1.97775ZM0.262219 14.837C-0.110581 15.2445 -0.0824672 15.877 0.325012 16.2498C0.732491 16.6226 1.36503 16.5945 1.73783 16.187L0.262219 14.837ZM0.262194 1.97775L6.7622 9.08241L8.23781 7.73239L1.73781 0.627721L0.262194 1.97775ZM6.7622 9.08241L13.2622 16.187L14.7378 14.837L8.23781 7.73239L6.7622 9.08241ZM13.2622 0.627721L6.7622 7.73239L8.23781 9.08241L14.7378 1.97775L13.2622 0.627721ZM6.7622 7.73239L0.262219 14.837L1.73783 16.187L8.23781 9.08241L6.7622 7.73239Z"/>
       </svg>
@@ -9,7 +9,7 @@
   </div>
   <div class="market-search__header">
     <div class="wrap-input market-search__input">
-      <input class="wrap-input__input" type="text" required>
+      <input class="wrap-input__input" type="text" required (input)="onSearch($event.target.value)">
       <label class="wrap-input__label" for="">Keyword of the coin</label>
       <div class="wrap-input__icon">
         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -19,10 +19,14 @@
       <div class="wrap-input__line"></div>
     </div>
   </div>
+
   <div class="market-search__content">
     <table class="table widget__table widget__table--mob">
       <tbody>
-      <tr class="table__row table__row--mob ">
+
+      <ng-scrollbar [autoHide]="false" [barClass]="'bar-class'" [thumbClass]="'thumb2'">
+      <ng-container *ngFor="let pair of showPairs | sort:'currencyPairName'">
+      <tr class="table__row table__row--mob " (click)="setCurrentPair(pair)">
         <td class="table__cell table__cell--tac" style="width: 30px;">
     <span class="table__row-star table__row-star--select">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -31,73 +35,27 @@
     </svg>
     </span>
         </td>
+        <td class="table__cell table__cell--tac" style="width: 30px;" *ngIf="false">
+    <span class="table__row-star">
+    <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path
+      d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
+    </svg>
+    </span>
+        </td>
         <td class="table__cell table__cell--tal">
-          <span>BTC</span>
-          <span class="txt-small txt-light-grey">/ <span>MLF</span></span>
+          <span>{{splitPairName(pair.currencyPairName)[0]}}</span>
+          <span class="txt-small txt-light-grey">/ <span>{{splitPairName(pair.currencyPairName)[1]}}</span></span>
         </td>
         <td class="table__cell table__cell--tar">
-          <span>0.055364 </span>
+          <span>{{pair.lastOrderRate}}</span>
           <span class="txt-small txt-light-grey">/<span>$ 417.00</span></span>
         </td>
       </tr>
       <tr style="height: 10px;"></tr>
-      <tr class="table__row table__row--mob ">
-        <td class="table__cell table__cell--tac" style="width: 30px;">
-    <span class="table__row-star">
-    <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path
-      d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
-    </svg>
-    </span>
-        </td>
-        <td class="table__cell table__cell--tal">
-          <span>BTC</span>
-          <span class="txt-small txt-light-grey">/ <span>NEM</span></span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0.012364 </span>
-          <span class="txt-small txt-light-grey">/<span>$ 22.00</span></span>
-        </td>
-      </tr>
-      <tr style="height: 10px;"></tr>
-      <tr class="table__row table__row--mob ">
-        <td class="table__cell table__cell--tac" style="width: 30px;">
-    <span class="table__row-star table__row-star--select">
-    <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path
-      d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
-    </svg>
-    </span>
-        </td>
-        <td class="table__cell table__cell--tal">
-          <span>BTC</span>
-          <span class="txt-small txt-light-grey">/ <span>ARM</span></span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0.037834 </span>
-          <span class="txt-small txt-light-grey">/<span>$ 93.40</span></span>
-        </td>
-      </tr>
-      <tr style="height: 10px;"></tr>
-      <tr class="table__row table__row--mob ">
-        <td class="table__cell table__cell--tac" style="width: 30px;">
-    <span class="table__row-star">
-    <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path
-      d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
-    </svg>
-    </span>
-        </td>
-        <td class="table__cell table__cell--tal">
-          <span>BTC</span>
-          <span class="txt-small txt-light-grey">/ <span>BYR</span></span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0.082364 </span>
-          <span class="txt-small txt-light-grey">/<span>$ 386.00</span></span>
-        </td>
-      </tr>
-      <tr style="height: 10px;"></tr>
+      </ng-container>
+      </ng-scrollbar>
+
       </tbody>
     </table>
   </div>
