--- a/src/app/dashboard/markets/markets.component.scss
+++ b/src/app/dashboard/markets/markets.component.scss
@@ -41,3 +41,15 @@ ng-scrollbar{
   background-color: #2a2a2a ;
   width: 1px !important;
 }
+
+:host {
+  position: relative;
+  width: 100%;
+  height: 90vh;
+}
+
+.widget__content.widget__content--mob{
+  ng-scrollbar{
+    height: 75vh;
+  }
+}
